refactor: Uniformizar builders de entidades de dominio